--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   ],
   "scripts": {
     "build": "gulp",
-    "test": "./node_modules/mocha/bin/mocha -r spec/helpers/node-setup.js spec"
+    "test": "./node_modules/mocha/bin/mocha spec"
   },
   "dependencies": {
     "URIjs": "^1.14.1",
@@ -37,7 +37,6 @@
     "when": "^3.5.2"
   },
   "devDependencies": {
-    "expect.js": "^0.3.1",
     "gulp": "^3.8.8",
     "gulp-header": "^1.0.5",
     "gulp-hint-not": "0.0.3",
@@ -46,14 +45,10 @@
     "gulp-spawn-mocha": "^0.4.1",
     "gulp-uglify": "^1.0.1",
     "istanbul": "^0.3.2",
-    "jsdom": "^1.0.3",
     "lodash": "^2.4.1",
     "machina": "^0.4.0-1",
     "mocha": "^1.21.4",
-    "should": "^4.0.4",
-    "source-map-loader": "^0.1.3",
-    "webpack": "^1.4.8",
-    "webpack-dev-server": "^1.6.5"
+    "should": "^4.0.4"
   },
   "engines": {
     "node": ">=0.10.0"
