Bug fix - missing content-type header when submitting JSON for request adapter

--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
       "url": "http://ifandelse.com"
     },
     {
+      "name": "Alex Robson",
+      "url": "http://nerdventure.io"
+    },
+    {
       "name": "Doug Neiner",
       "email": "doug@dougneiner.com",
       "url": "http://code.dougneiner.com"
