Added sinon, sinon-chai; Moved globals to jshintrc
Also silenced warn output on one test and added a verification console.warn was called.

--- a/spec/.jshintrc
+++ b/spec/.jshintrc
@@ -91,7 +91,19 @@
 		"after",
 		"afterEach",
 		"it",
-		"require"
+		"require",
+		"halon",
+		"when",
+		"_",
+		"sinon",
+		"should",
+		"adapterFactory",
+		"requestFactory",
+		"expectedOptionsResponse",
+		"expectedBoardResponse",
+		"expectedCardResponse",
+		"expectedCardTypeResponse",
+		"expectedUserResponse"
 	],
 
 	// LEGACY
