--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "gulp-spawn-mocha": "^2.0.1",
     "gulp-uglify": "^1.1.0",
     "istanbul": "^0.3.7",
-    "mocha": "^2.2.0"
+    "mocha": "^2.2.0",
+    "sinon": "^1.13.0",
+    "sinon-chai": "^2.7.0"
   },
   "engines": {
     "node": ">=0.10.0"
