--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
   ],
   "scripts": {
     "build": "gulp",
-    "test": "./node_modules/mocha/bin/mocha -r spec/helpers/node-setup.js spec",
-    "coverage": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -x 'spec/**/*'  -- -r spec/helpers/node-setup.js spec spec/*.spec.js",
+    "test": "gulp build:quick && mocha -r spec/helpers/node-setup.js spec",
+    "coverage": "gulp build:quick && istanbul cover _mocha -x 'spec/**/*' -- -r spec/helpers/node-setup.js spec spec/*.spec.js",
     "show-coverage": "open ./coverage/lcov-report/index.html"
   },
   "dependencies": {
