--- a/package.json
+++ b/package.json
@@ -53,13 +53,17 @@
     "chai": "^2.1.1",
     "chai-as-promised": "^4.3.0",
     "gulp": "^3.8.11",
+    "gulp-changed": "^1.2.1",
     "gulp-header": "^1.0.5",
     "gulp-hint-not": "0.0.3",
+    "gulp-jscs": "^1.6.0",
+    "gulp-jshint": "^1.10.0",
     "gulp-rename": "^1.2.0",
     "gulp-sourcemaps": "^1.5.0",
     "gulp-spawn-mocha": "^2.0.1",
     "gulp-uglify": "^1.1.0",
     "istanbul": "^0.3.10",
+    "jshint-stylish": "^1.0.1",
     "mocha": "^2.2.0",
     "sinon": "^1.13.0",
     "sinon-as-promised": "^2.0.3",
