Catch unfixable jscs errors in gulp

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "gulp-sourcemaps": "^1.5.0",
     "gulp-spawn-mocha": "^2.0.1",
     "gulp-uglify": "^1.1.0",
+    "gulp-util": "~3.0.5",
     "istanbul": "^0.3.10",
     "jshint-stylish": "^1.0.1",
     "mocha": "^2.2.0",
